tests/compile_fail/declare_scheduler_reserved_eevdf.rs
use ktstr::declare_scheduler;

declare_scheduler!(EEVDF, {
    name = "eevdf_user",
    binary = "scx_eevdf_user",
});

fn main() {}
